# demo-adk-mcp

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
agent/: agent.py  client.py  prompt.py
agent/data/: test.json
