[project]
name = "demo-adk-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.5.0",
    "mcp[cli]>=1.8.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "nest-asyncio>=1.6.0",
    "ruff>=0.11.9",
]
