[project]
name = "demo-adk-mcp"
version = "0.1.0"
description = "A simple agent built with Google ADK and MCP"
authors = [
    { name = "Taufiq Dwi Purnomo", email = "topexdw@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "mcp[cli]>=1.8.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "nest-asyncio>=1.6.0",
    "ruff>=0.11.9",
]

[tool.uv.sources]
google-adk = { git = "https://github.com/google/adk-python.git", rev = "e487d6d3cca8da3f1415220a94c069f33a4ea766" }
